[gd_scene load_steps=35 format=3 uid="uid://m4074xq6e06m"]

[ext_resource type="Texture2D" uid="uid://etj2opaduok3" path="res://Assets/Textures/Sand.png" id="1_65q3v"]
[ext_resource type="Texture2D" uid="uid://djhyr7n7fiied" path="res://Assets/Textures/BumpDune3.png" id="1_ir03b"]
[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_my4qp"]
[ext_resource type="Texture2D" uid="uid://mys331w13dt" path="res://Assets/Textures/OscarsDune1.1.png" id="2_tojtu"]
[ext_resource type="Script" path="res://Scripts/keybindLoader.gd" id="3_cnpip"]
[ext_resource type="PackedScene" uid="uid://oqb4x3h5pj8" path="res://Scenes/gun.tscn" id="4_g0evl"]
[ext_resource type="Texture2D" uid="uid://cjr2p547ql75p" path="res://Assets/Textures/TILEMAPcopy.png" id="5_w2dmv"]
[ext_resource type="Script" path="res://Scripts/UIgenerator.gd" id="6_bt4hm"]
[ext_resource type="Script" path="res://Scripts/keybindUIButtonHandler.gd" id="7_oiap5"]
[ext_resource type="PackedScene" uid="uid://0y2i0juhrmv2" path="res://Scenes/fast_linear_gun.tscn" id="8_f5681"]
[ext_resource type="Script" path="res://Scripts/unpauseHandler.gd" id="10_8dq1e"]
[ext_resource type="Script" path="res://Scripts/cancelButtonHandler.gd" id="10_vag3d"]
[ext_resource type="Script" path="res://Scripts/Camera2D.gd" id="13_bratx"]
[ext_resource type="Texture2D" uid="uid://f5y6p70rivr1" path="res://Assets/Textures/ui_close.svg" id="13_x0xyk"]
[ext_resource type="Script" path="res://inventoryHandler.gd" id="14_2vcrm"]
[ext_resource type="Texture2D" uid="uid://c71tbo1nbobl0" path="res://Assets/Textures/mag_glass.svg" id="14_p0hai"]
[ext_resource type="Texture2D" uid="uid://btub72b04vmnj" path="res://Assets/Textures/Big Background2.png" id="17_s5fwc"]
[ext_resource type="PackedScene" uid="uid://djq52jicd1c67" path="res://Scenes/jimmy.tscn" id="21_gvv07"]
[ext_resource type="Texture2D" uid="uid://bbyb12rkxps" path="res://Assets/Textures/FullBackground1-export.png" id="22_i0hv5"]
[ext_resource type="Texture2D" uid="uid://dh7u5aevkikfd" path="res://Assets/Textures/ScrollDraft-export.png" id="23_086pw"]
[ext_resource type="Script" path="res://Scripts/Scroll.gd" id="24_dyjx4"]
[ext_resource type="Script" path="res://Scripts/ScrollText.gd" id="25_34a06"]
[ext_resource type="PackedScene" uid="uid://c2e2hmw035cvv" path="res://Scenes/Player.tscn" id="26_8wl7l"]
[ext_resource type="PackedScene" uid="uid://d047ch3olrmo1" path="res://zombie_husk_guy.tscn" id="27_203vw"]
[ext_resource type="Texture2D" uid="uid://mvnnge410l8k" path="res://Assets/Textures/white_sun1-pixilart.png" id="28_lyrdh"]
[ext_resource type="Script" path="res://Scripts/WeatherControl.gd" id="36_a7ulw"]

[sub_resource type="TileMapPattern" id="TileMapPattern_ulina"]
tile_data = PackedInt32Array(0, 4, 1, 65536, 4, 2, 1, 65540, 1, 65537, 65540, 2, 2, 131076, 1, 65538, 65540, 2, 3, 196612, 1, 65539, 65540, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_gc14l"]
tile_data = PackedInt32Array(0, 262148, 1, 65536, 262148, 2, 1, 327684, 1, 65537, 327684, 2, 2, 393220, 1, 65538, 393220, 2, 3, 458756, 1, 65539, 458756, 2)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fyks6"]
texture = ExtResource("5_w2dmv")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 9.25, 16, 12.75, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 1.5, 16, 16, -16, 16, -16, 9)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -6.75, 16, 16, -16, 16, -16, 0.75)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -7)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -6, 16, 16, -16, 16, -16, -16)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 1.25, 16, 16, -16, 16, -16, -7)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 9.25, 16, 16, -16, 16, -16, 0.75)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, 16, -16, 16, -16, 8.75)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, -16)

[sub_resource type="TileSet" id="TileSet_0pe5f"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/4 = SubResource("TileSetAtlasSource_fyks6")
pattern_0 = SubResource("TileMapPattern_ulina")
pattern_1 = SubResource("TileMapPattern_gc14l")

[sub_resource type="Theme" id="Theme_7hcny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0ts4"]
size = Vector2(20626, 111.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_qb4cu"]
radius = 19.4612

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylrpf"]
size = Vector2(71, 14)

[node name="Node2D" type="Node2D"]
position = Vector2(38, 12)

[node name="Foreground Container" type="Node2D" parent="." groups=["Ground"]]

[node name="Dune3" type="StaticBody2D" parent="Foreground Container"]
position = Vector2(1162, 453)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Foreground Container/Dune3"]
visible = false
position = Vector2(-1728, -534)
polygon = PackedVector2Array(1270, 612, 1368, 551, 1463, 493, 1521, 460, 1573, 435, 1598, 422, 1652, 404, 1687, 397, 1722, 392, 1745, 393, 1790, 398, 1840, 414, 1877, 429, 1912, 448, 1943, 465, 1992, 494, 2024, 516, 2071, 547, 2128, 588, 2165, 613, 2198, 613, 2198, 644, 1650.44, 644, 1238, 644, 1238, 612, 1254, 612, 1270, 612)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Foreground Container/Dune3"]
z_index = 1
position = Vector2(-11, -212)
texture = ExtResource("1_ir03b")
metadata/_edit_lock_ = true

[node name="Dune4" type="StaticBody2D" parent="Foreground Container"]
position = Vector2(2934, 260)

[node name="Sprite2D2" type="Sprite2D" parent="Foreground Container/Dune4"]
position = Vector2(174, -401)
texture = ExtResource("2_tojtu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Foreground Container/Dune4"]
polygon = PackedVector2Array(-1206, 250, -968, 67, -743, -81, -530, -208, -346, -300, -201, -348, -76, -375, 45, -383, 113, -380, 191, -368, 267, -351, 364, -314, 554, -229, 950, -21, 1282, 143, 1579, 268, 1592, 269, 1648, 269, 1648, 333, -1298, 335, -1298, 271, -1235, 271)

[node name="Shelter" type="StaticBody2D" parent="Foreground Container"]
position = Vector2(-1096, 142)
rotation = 6.28319
scale = Vector2(0.605673, 0.957455)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Foreground Container/Shelter"]
polygon = PackedVector2Array(529.99, 133.686, 561.36, 86.6866, 822.226, 86.6858, 846.993, 135.774, 810.669, 100.264, 577.87, 101.309)

[node name="Sprite2D" type="Sprite2D" parent="Foreground Container/Shelter"]
position = Vector2(688.492, 187.996)
scale = Vector2(10.096, -6.49977)
texture = ExtResource("1_65q3v")

[node name="Area2D" type="Area2D" parent="Foreground Container/Shelter"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Foreground Container/Shelter/Area2D"]
position = Vector2(-11.5574, -1.0444)
polygon = PackedVector2Array(574.569, 231.863, 625.751, 151.441, 767.742, 150.397, 820.576, 236.04, 830.483, 280.951, 571.267, 280.952)

[node name="tileTemplateHoverSensor" type="TextureButton" parent="."]
z_index = 16
offset_left = -262.0
offset_top = -175.0
offset_right = -192.0
offset_bottom = -105.0
script = ExtResource("1_my4qp")
metadata/tileName = "itemTileTemplate"

[node name="TileMap" type="TileMap" parent="." groups=["Ground"]]
position = Vector2(-109, 4)
tile_set = SubResource("TileSet_0pe5f")
format = 2
layer_0/tile_data = PackedInt32Array(1310747, 4, 0, 1310746, 4, 0, 1310745, 4, 0, 1310744, 4, 0, 1310743, 4, 0, 1310742, 4, 0, 1310741, 4, 0, 1310740, 4, 0, 1310739, 4, 0, 1310738, 4, 0, 1310737, 4, 0, 1310736, 4, 0, 1310735, 4, 0, 1310734, 4, 0, 1310733, 4, 0, 1310732, 4, 0, 1310731, 4, 0, 1310730, 4, 0, 1310729, 4, 0, 1310728, 4, 0, 1310727, 4, 0, 1245190, 4, 0, 1245189, 4, 0, 1245188, 4, 0, 1245187, 4, 0, 1245186, 4, 0, 1245185, 4, 0, 1245184, 4, 0, 1310719, 4, 0, 1310718, 4, 0, 1310717, 4, 0, 1310716, 4, 0, 1310715, 4, 0, 1310714, 4, 0, 1310713, 4, 0, 1310712, 4, 0, 1310711, 4, 0, 1310710, 4, 0, 1310709, 4, 0, 1310708, 4, 0, 1310726, 65540, 0, 1310700, 4, 1, 1376236, 4, 2, 1310701, 65540, 1, 1376237, 65540, 2, 1310702, 131076, 1, 1376238, 65540, 2, 1310703, 196612, 1, 1376239, 65540, 2, 1703913, 4, 1, 1769449, 4, 2, 1703914, 65540, 1, 1769450, 65540, 2, 1703915, 131076, 1, 1769451, 65540, 2, 1703916, 196612, 1, 1769452, 65540, 2, 1572845, 4, 1, 1638381, 4, 2, 1572846, 65540, 1, 1638382, 65540, 2, 1572847, 131076, 1, 1638383, 65540, 2, 1572848, 196612, 1, 1638384, 65540, 2, 1769457, 4, 1, 1834993, 4, 2, 1769458, 65540, 1, 1834994, 65540, 2, 1769459, 131076, 1, 1834995, 65540, 2, 1769460, 196612, 1, 1834996, 65540, 2, 1703925, 4, 1, 1769461, 4, 2, 1703926, 65540, 1, 1769462, 65540, 2, 1703927, 131076, 1, 1769463, 65540, 2, 1703928, 196612, 1, 1769464, 65540, 2, 1638393, 4, 1, 1703929, 4, 2, 1638394, 65540, 1, 1703930, 65540, 2, 1638395, 131076, 1, 1703931, 65540, 2, 1638396, 196612, 1, 1703932, 65540, 2, 1572861, 4, 1, 1638397, 4, 2, 1572862, 65540, 1, 1638398, 65540, 2, 1572863, 131076, 1, 1638399, 65540, 2, 1507328, 196612, 1, 1572864, 65540, 2, 1507313, 4, 1, 1572849, 4, 2, 1507314, 65540, 1, 1572850, 65540, 2, 1507315, 131076, 1, 1507316, 196612, 1, 1441781, 4, 1, 1507317, 4, 2, 1441782, 65540, 1, 1507318, 65540, 2, 1441783, 131076, 1, 1441784, 196612, 1, 1310704, 4, 1, 1376240, 4, 2, 1310705, 65540, 1, 1376241, 65540, 2, 1310706, 131076, 1, 1310707, 196612, 1, 1376232, 4, 1, 1441768, 4, 2, 1376233, 65540, 1, 1441769, 65540, 2, 1376234, 131076, 1, 1376235, 196612, 1, 1441764, 4, 1, 1507300, 4, 2, 1441765, 65540, 1, 1507301, 65540, 2, 1441766, 131076, 1, 1441767, 196612, 1, 1507296, 4, 1, 1572832, 4, 2, 1507297, 65540, 1, 1572833, 65540, 2, 1507298, 131076, 1, 1572834, 131076, 2, 1507299, 196612, 1, 1572835, 196612, 2, 1572828, 4, 1, 1638364, 4, 2, 1572829, 65540, 1, 1638365, 65540, 2, 1572830, 131076, 1, 1638366, 131076, 2, 1572831, 196612, 1, 1638367, 196612, 2, 1638360, 4, 1, 1703896, 4, 2, 1638361, 65540, 1, 1703897, 65540, 2, 1638362, 131076, 1, 1703898, 131076, 2, 1638363, 196612, 1, 1703899, 196612, 2, 1703892, 4, 1, 1769428, 4, 2, 1703893, 65540, 1, 1769429, 65540, 2, 1703894, 131076, 1, 1769430, 65540, 2, 1703895, 196612, 1, 1769431, 65540, 2, 1769424, 4, 1, 1834960, 4, 2, 1769425, 65540, 1, 1834961, 65540, 2, 1769426, 131076, 1, 1834962, 65540, 2, 1769427, 196612, 1, 1834963, 65540, 2, 1834956, 4, 1, 1900492, 4, 2, 1834957, 65540, 1, 1900493, 65540, 2, 1834958, 131076, 1, 1900494, 65540, 2, 1834959, 196612, 1, 1900495, 65540, 2, 1900488, 4, 1, 1966024, 4, 2, 1900489, 65540, 1, 1966025, 65540, 2, 1900490, 131076, 1, 1966026, 65540, 2, 1900491, 196612, 1, 1966027, 65540, 2, 1966020, 4, 1, 2031556, 4, 2, 1966021, 65540, 1, 2031557, 65540, 2, 1966022, 131076, 1, 2031558, 65540, 2, 1966023, 196612, 1, 2031559, 65540, 2, 2031552, 4, 1, 2097088, 4, 2, 2031553, 65540, 1, 2097089, 65540, 2, 2031554, 131076, 1, 2097090, 65540, 2, 2031555, 196612, 1, 2097091, 65540, 2, 2031548, 262148, 1, 2097084, 262148, 2, 2031549, 327684, 1, 2097085, 327684, 2, 2031550, 393220, 1, 2097086, 393220, 2, 2031551, 458756, 1, 2097087, 458756, 2, 1966008, 262148, 1, 2031544, 262148, 2, 1966009, 327684, 1, 2031545, 327684, 2, 1966010, 393220, 1, 2031546, 393220, 2, 1966011, 458756, 1, 2031547, 458756, 2, 2359229, 262148, 1, 2424765, 262148, 2, 2359230, 327684, 1, 2424766, 327684, 2, 2359231, 393220, 1, 2424767, 393220, 2, 2359232, 458756, 1, 2424768, 458756, 2, 2293689, 262148, 1, 2359225, 262148, 2, 2293690, 327684, 1, 2359226, 327684, 2, 2293691, 393220, 1, 2359227, 393220, 2, 2293692, 458756, 1, 2359228, 458756, 2, 2228149, 262148, 1, 2293685, 262148, 2, 2228150, 327684, 1, 2293686, 327684, 2, 2228151, 393220, 1, 2293687, 393220, 2, 2228152, 458756, 1, 2293688, 458756, 2, 2162609, 262148, 1, 2228145, 262148, 2, 2162610, 327684, 1, 2228146, 327684, 2, 2162611, 393220, 1, 2228147, 393220, 2, 2162612, 458756, 1, 2228148, 458756, 2)

[node name="keybindHandler" type="Node" parent="."]
script = ExtResource("3_cnpip")

[node name="fastLinearGun" parent="." instance=ExtResource("8_f5681")]
position = Vector2(475, -33)
metadata/Damage = 1000000000
metadata/shotSpeed = 0.05

[node name="Gun" parent="." instance=ExtResource("4_g0evl")]
position = Vector2(661, -23)
metadata/damage = 50

[node name="Templates" type="Node" parent="."]

[node name="keybindButton" type="Button" parent="Templates"]
anchors_preset = -1
anchor_right = 0.054
anchor_bottom = 0.021
offset_left = 40.0
offset_top = 2.0
offset_right = -14.208
offset_bottom = -3.608
theme_override_colors/icon_normal_color = Color(0.788235, 0.788235, 0.788235, 1)
script = ExtResource("7_oiap5")
metadata/action = &""
metadata/_edit_use_anchors_ = true

[node name="cancelButton" type="Button" parent="Templates"]
visible = false
offset_right = 8.0
offset_bottom = 8.0
disabled = true
text = "Cancel"
script = ExtResource("10_vag3d")

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
visible = false
position = Vector2(375, 374)
zoom = Vector2(1.5, 1.5)
position_smoothing_speed = 0.0
script = ExtResource("13_bratx")

[node name="PauseScreen" type="Node2D" parent="Camera2D"]
process_mode = 3
visible = false
z_index = 12
position = Vector2(-87, 103)

[node name="Button" type="Button" parent="Camera2D/PauseScreen"]
z_index = 39
offset_left = -29.0
offset_top = -304.0
offset_right = 253.0
offset_bottom = -251.0
theme = SubResource("Theme_7hcny")
text = "Controls"

[node name="Button2" type="Button" parent="Camera2D/PauseScreen"]
z_index = 39
offset_left = -29.0
offset_top = -199.0
offset_right = 253.0
offset_bottom = -146.0
theme = SubResource("Theme_7hcny")
text = "Save Game"

[node name="ColorRect" type="ColorRect" parent="Camera2D/PauseScreen"]
process_mode = 3
visibility_layer = 512
z_index = 38
offset_left = -1957.0
offset_top = -719.0
offset_right = 2753.0
offset_bottom = 911.0
color = Color(0.223529, 0.223529, 0.223529, 0.968627)
script = ExtResource("10_8dq1e")

[node name="Control" type="Control" parent="Camera2D"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = -407.0
offset_top = -231.0
offset_right = 763.0
offset_bottom = 547.0
metadata/_edit_lock_ = true

[node name="inventoryContainer" type="Node2D" parent="Camera2D/Control"]
process_mode = 3
visible = false
z_index = 43
position = Vector2(-137, -85)
script = ExtResource("14_2vcrm")

[node name="itemTileContainer" type="ColorRect" parent="Camera2D/Control/inventoryContainer"]
offset_left = 212.0
offset_top = 97.0
offset_right = 832.0
offset_bottom = 482.0
mouse_filter = 2
color = Color(0.0117647, 0.117647, 0.156863, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="itemTileTemplate" type="ColorRect" parent="Camera2D/Control/inventoryContainer/itemTileContainer"]
z_index = 1
layout_mode = 0
offset_left = 47.0
offset_top = 126.0
offset_right = 117.0
offset_bottom = 196.0
mouse_filter = 2
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="closeButton" type="Button" parent="Camera2D/Control/inventoryContainer"]
process_mode = 3
offset_left = 723.0
offset_top = 110.0
offset_right = 822.0
offset_bottom = 209.0
disabled = true
action_mode = 0
icon = ExtResource("13_x0xyk")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/Control/inventoryContainer"]
position = Vector2(256.5, 126.5)
scale = Vector2(0.406249, 0.40625)
texture = ExtResource("14_p0hai")

[node name="TextEdit" type="TextEdit" parent="Camera2D/Control/inventoryContainer"]
offset_left = 284.0
offset_top = 108.0
offset_right = 454.0
offset_bottom = 142.0

[node name="rawr~" type="ColorRect" parent="Camera2D/Control/inventoryContainer"]
offset_left = 251.0
offset_top = 215.0
offset_right = 679.0
offset_bottom = 459.0
mouse_filter = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)
metadata/_edit_lock_ = true

[node name="VScrollBar" type="VScrollBar" parent="Camera2D/Control/inventoryContainer"]
offset_left = 659.0
offset_top = 222.0
offset_right = 677.0
offset_bottom = 446.0

[node name="uiContainer" type="Node2D" parent="Camera2D"]
process_mode = 3
visible = false
z_index = 60
position = Vector2(-587, -317)

[node name="ColorRect" type="ColorRect" parent="Camera2D/uiContainer"]
offset_left = -2310.0
offset_top = -1174.0
offset_right = 4086.0
offset_bottom = 1994.0
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="Control" type="Control" parent="Camera2D/uiContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("6_bt4hm")

[node name="Label" type="Label" parent="Camera2D/uiContainer"]
offset_left = 5.0
offset_top = 586.0
offset_right = 1151.0
offset_bottom = 639.0
text = "press button to change keybind, use ticker to cycle between alternate keybinds"

[node name="Background" type="ParallaxBackground" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]
position = Vector2(-54, -265)

[node name="Sun" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(2.08165e-12, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="Background/Sun"]
position = Vector2(698, 91)
texture = ExtResource("28_lyrdh")

[node name="RepeatingDunes" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(0.2, 0.1)
motion_mirroring = Vector2(1390, 2.08165e-12)
metadata/_edit_lock_ = true

[node name="RepeatingDunes" type="Sprite2D" parent="Background/RepeatingDunes"]
texture_filter = 1
position = Vector2(423, 285)
texture = ExtResource("22_i0hv5")
metadata/_edit_lock_ = true

[node name="BigRock" type="ParallaxLayer" parent="Background"]
position = Vector2(-1128, -236)
metadata/_edit_lock_ = true

[node name="BigRock" type="Sprite2D" parent="Background/BigRock"]
position = Vector2(1299, 460)
texture = ExtResource("17_s5fwc")
metadata/_edit_lock_ = true

[node name="jimmy" parent="." instance=ExtResource("21_gvv07")]
position = Vector2(-251, 589)

[node name="BottomBarrierDeath" type="Area2D" parent="."]
position = Vector2(-91, -211)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBarrierDeath"]
position = Vector2(276, 1678.38)
shape = SubResource("RectangleShape2D_c0ts4")
metadata/_edit_lock_ = true

[node name="Scroll" type="Sprite2D" parent="."]
position = Vector2(-90, 521)
scale = Vector2(4.04687, 3.8125)
texture = ExtResource("23_086pw")
script = ExtResource("24_dyjx4")
metadata/ScrollText = "BlahBlahBalh Why is this text so blurry"

[node name="Text" type="RichTextLabel" parent="Scroll"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0927
offset_top = -45.6394
offset_right = 41.9073
offset_bottom = 7.36065
theme_override_font_sizes/normal_font_size = 6
text = "Scroll Text Here"
scroll_active = false
script = ExtResource("25_34a06")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Scroll"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scroll/Area2D"]
position = Vector2(-0.0617752, -0.52459)
shape = SubResource("CircleShape2D_qb4cu")
metadata/_edit_lock_ = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(61, 26)
color = Color(0.533333, 0.521569, 0.666667, 1)

[node name="WeatherControl" type="Node" parent="."]
script = ExtResource("36_a7ulw")

[node name="PlayerContainer" parent="." instance=ExtResource("26_8wl7l")]
position = Vector2(204, 560)

[node name="Zombie Husk Guy" parent="." instance=ExtResource("27_203vw")]
position = Vector2(727, 612)

[node name="Spikes" type="StaticBody2D" parent="."]
position = Vector2(-913, 413)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes"]
shape = SubResource("RectangleShape2D_ylrpf")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Scroll/Area2D" to="Scroll" method="_on_area_2d_body_entered"]
